--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Match with friend</title>
-         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	   	<!-- Latest compiled and minified CSS & JS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 		<!-- Font Awesome Glyphicons -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
 		<!-- Chosen -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+
 
     </head>
     <body>
@@ -35,6 +40,17 @@
 				<option value="4">4</option>
 				<option value="5">5 (Strongly Agree)</option>
 			</select>
+
+			<h3><strong>Question 2</strong></h3>
+			<h4>Generally speaking, you rely more on your experience than your imagination.</h4>
+		 	<select data-placeholder="" class="chosen-select" id="q2">
+		 		<option value=""></option>
+	            <option value="1">1 (Strongly Disagree)</option>
+	            <option value="2">2</option>
+	            <option value="3">3</option>
+	            <option value="4">4</option>
+	            <option value="5">5 (Strongly Agree)</option>
+	      	</select>
 
 			<h3><strong>Question 3</strong></h3>
 			<h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
