--- a/app/public/home.html
+++ b/app/public/home.html
@@ -23,7 +23,7 @@
 
     	<footer class="footer">
 	      <div class="container">
-		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/jinredhub">GitHub Repo</a></p>
 	      </div>
 	    </footer>
     </body>
